syntax = "proto3";

import "google/protobuf/empty.proto";

package user;

service UserService {
    rpc GenGoogleAuthUrl (google.protobuf.Empty) returns (GoogleAuthUrl);
    rpc GoogleLogin (GoogleAuthCode) returns (Tokens);
    rpc AddAddress (AddAddressRequest) returns (google.protobuf.Empty);
    rpc Refresh (google.protobuf.Empty) returns (AccessToken);
    rpc Me (google.protobuf.Empty) returns (User);
    rpc MyAddresses (google.protobuf.Empty) returns (MyAddressesResponse);
}

message GoogleAuthUrl {
    string url = 1;
}

message GoogleAuthCode {
    string code = 1;
}

message AddAddressRequest {
    string address = 1;
}

message AccessToken {
    string accessToken = 1;
}

message Tokens {
    string accessToken = 1;
    string refreshToken = 2;
    repeated string addresses = 3;
}

message User {
    string email = 1;
    string name = 2;
    string picture = 3;
}


message MyAddressesResponse {
    repeated string addresses = 1;
}
